[package]
name = "zkcash"
version = "0.0.1"
edition = "2021"
description = "A privacy protocol for Solana"
license = "MIT"
rust-version = "1.79.0"

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.2.1"
borsh = "1.5.7"
light-poseidon = "0.3.0"
ark-bn254 = { version = "0.5.0", features = [] }
ark-ff = { version = "0.5.0", features = [] }
solana-bn254 = "2.2.2"
sha2 = "0.10.0"
once_cell = "1.19.0"

[[test]]
name = "zkcash_tests"
path = "tests/lib.rs"

[dev-dependencies]
solana-program-test = "2.2.1"
solana-sdk = "2.2.1"
tokio = { version = "1.14", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
